[gd_scene load_steps=2 format=3 uid="uid://bdkh8qjqno2n1"]

[ext_resource type="Script" path="res://Scenes/upgrade_screen.gd" id="1_jpjhu"]

[node name="Upgrade Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jpjhu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 650.0
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 153.0
offset_right = 1053.0
offset_bottom = 478.0
alignment = 1

[node name="Upgrade 0" type="TextureButton" parent="BoxContainer"]
layout_mode = 2

[node name="Upgrade 1" type="TextureButton" parent="BoxContainer"]
layout_mode = 2

[node name="Upgrade 2" type="TextureButton" parent="BoxContainer"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 153.0
offset_right = 1053.0
offset_bottom = 478.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[connection signal="pressed" from="BoxContainer/Upgrade 0" to="." method="_on_upgrade_0_pressed"]
[connection signal="pressed" from="BoxContainer/Upgrade 1" to="." method="_on_upgarde_1_pressed"]
[connection signal="pressed" from="BoxContainer/Upgrade 2" to="." method="_on_upgarde_2_pressed"]
